Fix buttons to not overlap content

--- a/css/page.css
+++ b/css/page.css
@@ -114,12 +114,14 @@ html, body {
 
 /* ----- PAGE CONTROLS ----- */
 
-.page .page-control {
-    position: absolute;
-    width: calc(100vw - 2em);
-    height: fit-content;
-    bottom: 1em;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
+.page .page-control .button-forward {
+    position:absolute;
+    right:1em;
+    bottom:1em;
+}
+
+.page .page-control .button-back {
+    position:absolute;
+    left:1em;
+    bottom:1em;
 }
